--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -87,6 +87,29 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:id="@+id/layoutReceiptCustomer"
+                    android:layout_marginTop="3dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="14sp"
+                        android:text="Customer : "/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="16sp"
+                        android:id="@+id/tvReceiptCustomer"/>
+
+                </LinearLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
@@ -126,7 +149,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:background="@color/colorBlack"
-                    android:layout_marginVertical="7dp"/>
+                    android:layout_marginVertical="5dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -136,7 +159,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:padding="5dp"
+                        android:padding="3dp"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:id="@+id/tvReceiptSubTotalTitle"
@@ -150,7 +173,7 @@
                         android:id="@+id/tvReceiptSubTotal"
                         android:text="Sub Total : 0"
                         android:gravity="end"
-                        android:padding="5dp"
+                        android:padding="3dp"
                         android:textSize="14sp"
                         android:visibility="gone"
                         android:textColor="@color/colorBlack"
@@ -164,7 +187,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:padding="5dp"
+                        android:padding="3dp"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:id="@+id/tvReceiptDiscountTitle"
@@ -177,7 +200,7 @@
                         android:layout_weight="6"
                         android:id="@+id/tvReceiptDiscount"
                         android:gravity="end"
-                        android:padding="5dp"
+                        android:padding="3dp"
                         android:textSize="14sp"/>
                 </LinearLayout>
 
@@ -189,7 +212,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:padding="5dp"
+                        android:padding="3dp"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:id="@+id/tvReceiptTaxTitle"
@@ -202,7 +225,7 @@
                         android:layout_weight="6"
                         android:id="@+id/tvReceiptTax"
                         android:gravity="end"
-                        android:padding="5dp"
+                        android:padding="3dp"
                         android:textSize="14sp"/>
                 </LinearLayout>
 
@@ -215,7 +238,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:padding="5dp"
+                        android:padding="3dp"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         android:textColor="@color/colorBlack"
@@ -227,7 +250,7 @@
                         android:layout_weight="6"
                         android:id="@+id/tvReceiptTotal"
                         android:gravity="end"
-                        android:padding="5dp"
+                        android:padding="3dp"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:textColor="@color/colorBlack"/>
@@ -238,7 +261,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:background="@color/colorBlack"
-                    android:layout_marginVertical="7dp"/>
+                    android:layout_marginVertical="5dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -303,13 +326,36 @@
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:background="@color/colorBlack"
-                    android:layout_marginVertical="10dp"/>
+                    android:layout_marginTop="10dp"/>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginVertical="5dp"
+                    android:id="@+id/layoutReceiptNote">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="14sp"
+                        android:text="Note: "/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="16sp"
+                        android:id="@+id/tvReceiptNote"/>
+
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorBlack"
+                    android:layout_marginTop="5dp"
                     android:gravity="center"
                     android:textSize="14sp"
                     android:text="Trans Code : #11"
@@ -330,7 +376,8 @@
                     android:textColor="@color/colorBlack"
                     android:gravity="center"
                     android:textSize="16sp"
-                    android:layout_marginTop="20sp"
+                    android:layout_marginTop="15sp"
+                    android:id="@+id/tvReceiptSincere"
                     android:text="- - - Thank You - - -"/>
 
             </LinearLayout>
