--- a/app/src/main/res/layout/fragment_analytic.xml
+++ b/app/src/main/res/layout/fragment_analytic.xml
@@ -37,7 +37,7 @@
                         android:gravity="center_horizontal"/>
 
                     <ProgressBar
-                        android:layout_width="wrap_content"
+                        android:layout_width="30dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:id="@+id/pbAnalyticTotalProfit"/>
@@ -66,7 +66,7 @@
                             android:textColor="@color/colorBlack"/>
 
                         <ProgressBar
-                            android:layout_width="wrap_content"
+                            android:layout_width="30dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
                             android:id="@+id/pbAnalyticTotalGross"/>
@@ -102,7 +102,7 @@
                         android:gravity="center_horizontal"/>
 
                     <ProgressBar
-                        android:layout_width="wrap_content"
+                        android:layout_width="30dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:id="@+id/pbAnalyticTodayIncome"/>
@@ -139,7 +139,7 @@
                         android:textColor="@color/colorBlack"/>
 
                     <ProgressBar
-                        android:layout_width="wrap_content"
+                        android:layout_width="30dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:id="@+id/pbAnalyticMostPurchasedProduct"/>
