--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -6,7 +6,7 @@
     tools:context=".product.ProductFragment">
 
     <ProgressBar
-        android:layout_width="wrap_content"
+        android:layout_width="30dp"
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:id="@+id/pbProduct"/>
