--- a/app/src/main/res/layout/row_customer.xml
+++ b/app/src/main/res/layout/row_customer.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginVertical="3dp"
     android:elevation="10dp">
 
     <LinearLayout
@@ -26,10 +27,9 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:text="P"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 android:gravity="center"
-                android:textStyle="bold"
-                android:textColor="@color/colorBlack"
+                android:textColor="@color/colorWhite"
                 android:id="@+id/tvRowCustomerFirstName"/>
         </FrameLayout>
 
