--- a/app/src/main/res/layout/row_product_list.xml
+++ b/app/src/main/res/layout/row_product_list.xml
@@ -6,11 +6,19 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:elevation="5dp">
-    <ImageView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_margin="5dp"
-        android:id="@+id/ivRowProductList"/>
+        android:layout_margin="5dp">
+        <ProgressBar
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:id="@+id/pbRowProductList"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:id="@+id/ivRowProductList"/>
+    </FrameLayout>
 </androidx.cardview.widget.CardView>
 
