--- a/app/src/main/res/layout/fragment_manage_product_update_product.xml
+++ b/app/src/main/res/layout/fragment_manage_product_update_product.xml
@@ -83,7 +83,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:maxLines="5"
-                        android:lines="1"
+                        android:lines="2"
+                        android:gravity="top"
                         android:id="@+id/etManageProductDescription"
                         android:hint="Description"/>
                 </com.google.android.material.textfield.TextInputLayout>
