--- a/app/src/main/res/layout/activity_manage_merchant.xml
+++ b/app/src/main/res/layout/activity_manage_merchant.xml
@@ -86,6 +86,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/etMerchantAddress"
+                    android:inputType="textMultiLine"
+                    android:gravity="top"
+                    android:maxLines="2"
+                    android:lines="2"
                     android:hint="Address"/>
             </com.google.android.material.textfield.TextInputLayout>
             <EditText
@@ -94,7 +98,7 @@
                 android:hint="No Telp"
                 android:id="@+id/etMerchantNoTelp"
                 android:inputType="phone"
-                android:layout_marginVertical="20dp"/>
+                android:layout_marginBottom="20dp"/>
 
             <ProgressBar
                 android:layout_width="wrap_content"
